<resources>
    <string name="app_name">Smart Watch Demo</string>
    <string name="login_title">Автентифікація годинника</string>
    <string name="login_subtitle">Використайте мобільний застосунок, щоб розблокувати симульований годинник. Демо PIN: 1234</string>
    <string name="pin_hint">Введіть 4-значний PIN</string>
    <string name="login_button">Автентифікувати</string>
    <string name="login_default_status">Годинник стартує заблокованим. Спершу виконайте автентифікацію.</string>
    <string name="dashboard_title">Панель смарт-годинника</string>
    <string name="watch_status_card">Поточний стан годинника</string>
    <string name="actions_title">Дії з годинником</string>
    <string name="refresh_button">Оновити стан годинника</string>
    <string name="sync_time_button">Синхронізувати час</string>
    <string name="set_alarm_button">Встановити будильник</string>
    <string name="lock_button">Заблокувати годинник</string>
    <string name="alarm_hint">Час будильника, наприклад 07:30</string>
    <string name="time_label">Поточний час</string>
    <string name="day_label">День тижня</string>
    <string name="date_label">Дата</string>
    <string name="battery_label">Батарея</string>
    <string name="steps_label">Кроки</string>
    <string name="temperature_label">Температура</string>
    <string name="alarm_label">Будильник</string>
    <string name="auth_status_label">Статус автентифікації</string>
    <string name="battery_format">%1$d%%</string>
    <string name="temperature_format">%1$d°C</string>
    <string name="locked">Заблоковано</string>
    <string name="unlocked">Розблоковано</string>
    <string name="status_loaded">Стан годинника оновлено.</string>
    <string name="loading_status">Завантаження стану годинника…</string>
    <string name="syncing_time">Синхронізація часу…</string>
    <string name="setting_alarm">Оновлення будильника…</string>
    <string name="updating_lock">Блокування годинника…</string>
    <string name="time_synced">Час синхронізовано до %1$s.</string>
    <string name="alarm_set">Будильник встановлено на %1$s.</string>
    <string name="watch_locked">Годинник заблоковано. Автентифікуйтесь знову.</string>
    <string name="auth_required">На симуляторі годинника потрібна автентифікація.</string>
    <string name="login_success">Автентифікація успішна. Відкриваю панель…</string>
    <string name="login_failed">Невірний PIN. Для демо використайте 1234.</string>
    <string name="authenticating">Автентифікація…</string>
    <string name="invalid_pin">Введіть 4-значний PIN.</string>
    <string name="invalid_time">Введіть час у форматі HH:mm.</string>
    <string name="connection_error">Не вдається підключитися до симулятора годинника. Переконайтеся, що він запущений на хості.</string>
    <string name="alarm_notification_title">Будильник годинника</string>
    <string name="alarm_notification_body">Досягнуто часу будильника %1$s на симульованому годиннику.</string>
    <string name="alarm_channel_name">Будильники годинника</string>
    <string name="language_ua">UA</string>
    <string name="language_en">EN</string>
</resources>
